# turboquant-mlx

./: .gitignore  ARCH_AUDIT.md  CONTRIBUTING.md  GEMINI.md  LICENSE  PLAN.md  README.md  calibrate.py  pyproject.toml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
benchmarks/: __init__.py  benchmark.py
c_src/: polarquant.metal  polarquant_ext.cpp
core/: polarquant.py  qjl.py  turboquant.py
docs/: math_foundation.md
mlx_core/: __init__.py  cache.py  mlx_polarquant.py  mlx_qjl.py  mlx_turboquant.py
plugins/: cache_plugin.py
scripts/: run_needle_test.py  run_server.py  turboquant-server.sh
src/turboquant_mlx/plugins/: cache_plugin.py
tests/: test_asymmetric_cache.py  test_math.py  test_mlx_qjl_script.py  test_mlx_script.py  test_polarquant.py  test_turboquant.py
